frontend/manifesets/deploy/stage/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: grapycal
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: docker.io/patrickuuuu/grapycal-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
